# Siglent

./: CMakeLists.txt  README.md  Siglent_DAQ.py  requirements.txt
.github/workflows/: validation.yml
ANA/: CMakeLists.txt  Hit.cxx  Hit.h  HitLinkDef.h  SigRoot.cxx  analyzeSiglent.cxx
cmake/: thisSiglent.cmake
config/: siglent.yaml
macros/: savespc.C  utilsSiglent.C
python/: Siglent_DAQ.py
scripts/: processdata.sh
